Alignment issue in Room plan: Economy

--- a/src/app/views/landing/Booking/Booking.component.scss
+++ b/src/app/views/landing/Booking/Booking.component.scss
@@ -356,6 +356,16 @@ form.stripe {
     form.stripe {
       width: 80vw;
     }
+   
+  }
+
+  @media  (max-width: 600px) {
+    status-view{
+      display: none;
+    }
+    .left-mobile {
+      margin-left: 50px;
+    }
   }
 
 //   stripe end
